[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/LevelsNobutton.png" type="Texture" id=1]
[ext_resource path="res://Assets/ButtonsLayout/SleepDownBlack.png" type="Texture" id=2]
[ext_resource path="res://Assets/ButtonsLayout/SleepDownRed.png" type="Texture" id=3]
[ext_resource path="res://Images/Layout1.6.2.png" type="Texture" id=4]
[ext_resource path="res://Assets/ButtonsLayout/PowerIdle.png" type="Texture" id=5]
[ext_resource path="res://Assets/ButtonsLayout/SleepIdle.png" type="Texture" id=6]
[ext_resource path="res://Assets/ButtonsLayout/PowerDownBlack.png" type="Texture" id=7]
[ext_resource path="res://Assets/ButtonsLayout/PowerDownRed.png" type="Texture" id=8]
[ext_resource path="res://Images/LevelButton.png" type="Texture" id=9]
[ext_resource path="res://Scripts/SelectLevel.gd" type="Script" id=10]
[ext_resource path="res://SoundEffects/menu.ogg" type="AudioStream" id=11]

[node name="Node2D" type="Node2D"]
script = ExtResource( 10 )

[node name="MainLayout" type="Sprite" parent="."]
position = Vector2( 608, 480 )
texture = ExtResource( 4 )

[node name="CoreDefenderBackground" type="Sprite" parent="."]
position = Vector2( 608, 384 )
texture = ExtResource( 1 )

[node name="PowerButton" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 1152.0
margin_top = 864.0
margin_right = 1192.0
margin_bottom = 904.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SleepButton" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 1152.0
margin_top = 912.0
margin_right = 1192.0
margin_bottom = 952.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="TextureButton" parent="."]
margin_left = 232.0
margin_top = 400.0
margin_right = 312.0
margin_bottom = 480.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0
autoplay = true
[connection signal="pressed" from="PowerButton" to="." method="_on_PowerButton_pressed"]
[connection signal="pressed" from="SleepButton" to="." method="_on_SleepButton_pressed"]
[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
